--- a/M2_length_structure.qmd
+++ b/M2_length_structure.qmd
@@ -10,18 +10,18 @@ editor: visual
 
 ## Goal
 
--   P1: Ability to assimilate length data
--   P2: Ability to estimate growth parameters
+-   Priority 1: Ability to fit to marginal length composition data
+-   Priority 2: Ability to estimate growth parameters
 
 ## Alternative methods for including length data in age-structured assessment models
 
-## An empirical length-at-age method for length-based selectivity
+### An empirical length-at-age method for length-based selectivity
 
-This approach would not use length or conditional length at age compositions, avoids estimation of growth, and is presumably similar in run times to models with age-specific selectivity. Suppose there is a matrix of annual empirical length at age estimates analogous to weight at age. To estimate length-based selectivity one could specify selectivity at age as a function of length at age: $s_a = s\left[[f\left(L_a\right)\right]$ where $f()$ could be a functional form (e.g., logistic, double-normal, etc.). The empirical lengths-at age could be derived in various ways, but for a specific stock would probably be analogous to how the corresponding empirical weight at age is calculated.
+This approach would not use length or conditional age-at-length data, avoids estimation of growth, and is presumably similar in run times to models with age-specific selectivity. Suppose there is a matrix of annual empirical length-at-age estimates analogous to weight-at-age. To estimate length-based selectivity one could specify selectivity-at-age as a function of length-at-age: $s_a = s\left[[f\left(L_a\right)\right]$ where $f()$ could be a functional form (e.g., logistic, double-normal, etc.). The empirical lengths-at age could be derived in various ways, but for a specific stock would probably be analogous to how the corresponding empirical weight at age is calculated.
 
-Trade-offs of this approach include: The inability to incorporate uncertainty in the length-at-age distribution. 2) Assumes no variability in length at age. 3) similar to previous approaches do not allow length based mortality to influence the length structure of the population.
+<mark>**IMPLEMENTATION NOTES:**Trade-offs of this approach include: The inability to incorporate uncertainty in the length-at-age distribution. 2) Assumes no variability in length-at-age. 3) similar to previous approaches do not allow length-based mortality to influence the length structure of the population.</mark>
 
-## AK method
+### AK method
 
 Marginal age and length compositions are often fit in bespoke ADMB models in Alaska. This approach relies on age-based selectivity functions, and growth is not estimated internally.
 
@@ -49,7 +49,7 @@ Predicted survey age and length marginal compositions are obtained in an identic
 
 <mark>**IMPLEMENTATION NOTES:** This method has the benefit of being very simple. The known drawbacks are that it does not currently include length-based selectivity, and at least in Alaska, growth (i.e., the age-length transition matrix) is not estimated internally. Extensions could be developed that include length-based selectivity; for example, that convert length-based selectivity to age-based selectivity using the transpose of the age-length transition matrix. When marginal length compositions are fit, this would require an extra dot product calculation in the conversion from $\hat{p}_{y,f,a}$ to $\hat{p}_{y,f,l}$. Note that the SS3 approach is doing the same calculations but doing so using element-wise multiplication and summing over lengths or ages to get marginal age or length compositions, respectively. In SS3, these calculations happen regardless of whether age or length-based selectivity is used. It is unclear if the element-wise multiplication approach in SS3 or the dot product approach have substantial impacts on model run-time or if the model compiler will treat these approaches as equivalent. </mark>
 
-## SAM method
+### SAM method
 
 SAM is a state-space assessment model used in several ICES stock assessments (is the best citation Nielsen and Berg, 2014?).
 
@@ -115,9 +115,9 @@ Predicted survey age and length marginal compositions are obtained in an identic
 
 One significant limitation of this approach is that while length-based selectivity patterns can be functionally specified in SS3 they do not actually impact the length-at-age structure of the population which is calculated from a normal distribution around mean size at age in each year/age calculation step. This results in the model requiring much if not all of the computational burden of a age-and-length conditioned model without many of the benefits. Length specific effects such as over-depletion of fast growing individuals are hypothesized to be a potential source of the frequent conflict between length and age composition data in many assessments. This potential problem can be partially addressed in SS3 through the use of growth morphs which can represent sub-populations with differing growth rates. However, adding multiple growth morphs on top of the existing length-at-age redistribution function will even further slow model run times. </mark>
 
-## A full age and length structured model
+### A fully age and length structured model
 
-An alternate path for FIMS could be to fully specify abundance at age and length allowing for both age and length specific selectivity and growth related fishery impacts such as depletion of fast growing individuals. This scenario would simply track abundance at age and length explicitly rather than requiring transformation through an age-length matrix.
+An alternate path for FIMS could be to specify abundance at age and length allowing for both age- and length-specific selectivity and growth-related fishery impacts such as depletion of fast-growing individuals. This scenario would track abundance-at-age and -length explicitly rather than requiring transformation through an age-length transition matrix.
 
 $$
 \hat{C}_{y,f,l,a}=S_{y,f,l}S_{y,f,a}F_{y,f}N_{y,a,l}\frac{(1-\text{exp}(-Z_{y,a,l}))}{Z_{y,a,l}}
@@ -137,17 +137,19 @@ $$ \text{log}\hat{C}_{y,f,a,l}=\text{log}F_{y,f,a,l}-\text{log}Z_{y,f,a,l}+\text
 
 <mark>**IMPLEMENTATION NOTES:** This method has the benefit of being able to represent true age and length specific dynamics, while also being able to collapse down to a pure age or length structured model if the number of length or age bins was reduced to 1 such as is proposed in the fixed empirical length-at-age approach described above. Explicit age and length conditioned models such as GADGET have been developed in the past however they are often not fisheries focused and usually suffer from long run times. However Options for achieving sparsity and reduced run-time include variable age/length bins such that only high frequency bins are calculated (there are no 100cm age zero fish and no 1cm age 10 fish for instance so we could assume apriori that they are 0 based on some external threshold).
 
-Additional notes and references in [M2 development notes folder](https://drive.google.com/drive/folders/1Wh9Exh_kMlo97Z-r-Luj1_mjB4XOnRh4)
+## Summary of alternative methods
+
+Notes and references in [M2 development notes folder](https://drive.google.com/drive/folders/1Wh9Exh_kMlo97Z-r-Luj1_mjB4XOnRh4)
 
 </mark>
 
-| Approach                | Pros                                                                          | Cons                                                                                             |
+| Approach                | Pros                                                                         | Cons                                                                                             |
 |--------------------------------|--------------------|--------------------|
-| Empirical Length at age | Fast and allows function forms of length selection                            | No uncertainty in length at age and no fishery impacts on length at age structure                |
-| Alaska method           | allow length-based selectivity                                                | does not allow for growth estimation or fishery impact on length structure                       |
-| SAM method              | State-space flexibility                                                       | Current practices in US focused on parametric modeling. Length not incorporated in current form. |
-| Age-length key (SS3)    | allow for selectivity at length and tracks numbers- and age-at-length         | can be slow due to dense matrices. does not track length specific fishing impacts.               |
-| Full age-length         | does not assume fixed age-length key. Potential to scale complexity/runtime.  | could be computationally intensive based on bin size.                                            |
+| Empirical Length at age | Fast and allows function forms of length selection                           | No uncertainty in length at age and no fishery impacts on length at age structure                |
+| Alaska method           | allow length-based selectivity                                               | does not allow for growth estimation or fishery impact on length structure                       |
+| SAM method              | State-space flexibility                                                      | Current practices in US focused on parametric modeling. Length not incorporated in current form. |
+| Age-length key (SS3)    | allow for selectivity at length and tracks numbers- and age-at-length        | can be slow due to dense matrices. does not track length specific fishing impacts.               |
+| Full age-length         | does not assume fixed age-length key. Potential to scale complexity/runtime. | could be computationally intensive based on bin size.                                            |
 
 ## References
 
@@ -165,43 +167,58 @@ Bjarki Þór Elvarsson, Pamela J. Woods, Höskuldur Björnsson, Jamie Lentin, Gu
 
 ### Goals
 
--   P1: Allow for multi-sex population structure
--   P1: Structure needs to be easily generalizable to new levels of modeling complexity including multiple areas
--   P1: Model needs to maintain maximum sparsity as dimensionality increases to optimize performance.
+-   Priority (?): Allow for multi-sex population structure
+-   Priority (?): Structure needs to be easily generalizable to new levels of modeling complexity, including multiple areas
+-   Priority (?): Model needs to maintain maximum sparsity as dimensionality increases to optimize performance.
 
 ### Populations as subpopulations:
 
-In this scenario the existing population module becomes a sub-population. In this case each sub-population contains age/time structure with its own class. Sub-populations would be generalizable to different partitions, such as sex, area, and species, wich a common set of functions that govern 1. interaction between sub-populations and 2. movement between sub-populations. Currently, each population within FIMS has members unique to each population. These members include parameters, derived quantities, and fixed values such as year and age dimensions. 
+In this scenario the existing population module becomes a sub-population. In this case each sub-population contains age/time structure with its own class. Sub-populations would be generalizable to different partitions, such as sex, area, and species, with a common set of functions that govern 1) interaction between sub-populations, and 2) movement between sub-populations. Currently, each population within FIMS has members unique to each population. These members include parameters, derived quantities, and fixed values such as year and age dimensions.
 
 Requirements:
-- No increase in complexity for the single-population case
-- Easy to share parameters across populations
-- Easy to aggregate derived quantities across populations
-- Fleets operate on one or more populations
 
-Design: 
-- Use TMB map function to mirror parameters if sub-populations need to share
-- Reference points are specific to each population
-- Can store pointer to the linked population within the Information class and reference it within the other population
-- Fleet-specific methods (CalculateCatch, etc.) will need to move from Population to Fleet
-- Add Fleet->Evaluate and associated call to model.hpp
+-   No increase in complexity for the single-population case
+
+-   Easy to share parameters across populations
+
+-   Easy to aggregate derived quantities across populations
+
+-   Fleets operate on one or more populations
+
+Design:
+
+-   Use TMB `map` function to mirror parameters if sub-populations need to share
+
+-   Reference points are specific to each population
+
+-   Can store pointer to the linked population within the Information class and reference it within the other population
+
+-   Fleet-specific methods (`CalculateCatch`, etc.) will need to move from `Population` to `Fleet`
+
+-   Add `Fleet->Evaluate` and associated call to `model.hpp`
 
 Evaluation criteria:
-- Compare to multi-WHAM and SS3 approaches to segementing populations to ID if class structure improves extensibility
-- What are the metrics for success?
+
+-   Compare to multi-WHAM and SS3 approaches to segementing populations to ID if class structure improves extensibility
+
+-   What are the metrics for success?
 
 ### Unique units as subpopulations:
 
-Overview: In this scenario a sub-population would be created for every unique sub-unit of the population for instance all individuals of a single age/size/sex/area/species with whatever level of resolution the user chooses to specify. In this scenario all dynamics of the model are specified as transitions and interactions between these sub-units. Each sub-population would have it’s own unique parameter values that could be specified to be fixed for that sub-population (such as growth or mortality rate) or dynamically updated as individuals transfer into the sub-population (such as average age or size) where the updated value could be an abundance weighted average of current and incoming individual values.
+Overview: In this scenario a sub-population would be created for every unique sub-unit of the population, for instance all individuals of a single age/size/sex/area/species with whatever level of resolution the user chooses to specify. In this scenario all dynamics of the model are specified as transitions and interactions between these sub-units. Each sub-population would have it’s own unique parameter values that could be specified to be fixed for that sub-population (such as growth or mortality rate), or dynamically updated as individuals transfer into the sub-population (such as average age or size), where the updated value could be an abundance weighted average of current and incoming individual values.
 
-· A standard age structured model would simply have n+1 subpopulations for the number of ages in the population and a plus group. Transition dynamics would then be 100% movement of individuals from one age bin to the next at each annual time step with the age zero bin being filled via a recruitment function and the plus group applying mortality and 1 year of aging to the plus group and then averaging that age and size with the incoming individuals from the last tracked age bin based on their relative abundances. · A purely length structured model could be produced by using n lengths subpopulations and then defining transition dynamics between those length bins at each time step. · From these you could then expand to a fully age/length specific model if desired and maintain sparsity by only having length bins for the reasonably abundance lengths at each age. · Using this type of structure it may also be possible to represent fishing and survey fleets as subpopulations as there interactions are basically the same as predation in a multispecies model. · Could explicitly model mature and immature individuals as separate subpopulations to enable different growth and fishery selectivity impacts. Have you studied the spatial capabilities paper by Goethal and Berger and others; they review all these issues? Areas implemented as a population can be too restrictive if there is much adult movement.
+A standard age structured model would have n+1 subpopulations for the number of ages in the population and a plus group. Transition dynamics would then be 100% movement of individuals from one age bin to the next at each annual time step with the age zero bin being filled via a recruitment function and the plus group applying mortality and 1 year of aging to the plus group and then averaging that age and size with the incoming individuals from the last tracked age bin based on their relative abundances.
+
+A purely length structured model could be produced by using n lengths subpopulations and defining transition dynamics between those length bins at each time step. From these a fully age/length specific model could be expanded if desired and sparsity maintained by only having length bins for the reasonably abundance lengths at each age (**editing needed**). Using this type of structure it may also be possible to represent fishing and survey fleets as subpopulations as their interactions are analogous to predation in a multispecies model.
+
+\*\*Notes for future development:\*\* Could explicitly model mature and immature individuals as separate subpopulations to enable different growth and fishery selectivity impacts. Have you studied the spatial capabilities paper by Goethel and Berger and others; they review all these issues? Areas implemented as a population can be too restrictive if there is much adult movement.
 
 ### Biologically-identified sub-populations (SS3)
 
-In SS3 the concept is: Sub-populations are biologically identified. Characteristics are: sex, growth morph, settlement timing (within year), platoon (for implementation of size-based survivorship). For each biology x settlement timing, fish are distributed across sexes and across platoons at birth. All reside in a N-at-age matrix with a dimension, g. natage(t,p,g,a) where t is yr&season, p is area, g is biology. A fleet operating in area p affects all bio groups in that area according to their selectivity and catchability. Recruits are distributed across populations and areas at birth. When fish of a given g move between areas, they are still the same “g” biologically. This is a bit limiting as it means that growth rate cannot be area-specific in SS3. Although a fast-growing morph could recruit into one area and a slow growing morph into another area and they can move among the areas. Alternatively, growth could be area specific and when fish move between areas the mean size of fish in each destination area would be the weighted mean of resident and immigrant fish. This means that mean size-at-age would be very dynamic and cause lots of computations.
+In SS3 the concept is: Sub-populations are biologically identified. Characteristics are: sex, growth morph, settlement timing (within year), platoon (for implementation of size-based survivorship). For each biology x settlement timing, fish are distributed across sexes and across platoons at birth. All reside in a N-at-age matrix with a dimension, g. natage(t,p,g,a) where t is yr&season, p is area, g is biology. A fleet operating in area p affects all bio groups in that area according to their selectivity and catchability. Recruits are distributed across populations and areas at birth. When fish of a given g move between areas, they are still the same “g” biologically. This is a bit limiting as it means that growth rate cannot be area-specific in SS3. Although a fast-growing morph could recruit into one area and a slow growing morph into another area and they can move among the areas. Alternatively, growth could be area-specific and when fish move between areas, the mean size of fish in each destination area would be the weighted mean of resident and immigrant fish. This means that mean size-at-age would be very dynamic and cause lots of computations.
 
 | Approach                       | Pros                                                                                                     | Cons                                                                                                                                                                                                                                                                                                                       |
-|-------------------------------------|------------------|-----------------|
+|------------------------------------|------------------|------------------|
 | Populations are subpopulations | Subpopulation is easily interpretable and follows structure we are familiar with, computationally simple | Dynamics between sub-populations occur at a different timestep than those that can occur between ages within a sub-population, limits the applicability of density-dependent processes such as cannibalism, less flexible than specifying fully flexible population segments since each population must have age structure |
 | Dynamic subpopulations         | Subpopulations do not need age structure and interact in real time, and are very flexible and extensible | Bookkeeping might mean replicating complex structures anyway                                                                                                                                                                                                                                                               |
 | Biological subpopulations      | Easier biological interpretability                                                                       | Harder to extend to new segments                                                                                                                                                                                                                                                                                           |
@@ -226,13 +243,13 @@ males$nseasons <- females$nseasons <- 1
 males$nyears <- females$nyears <- nyears
 ```
 
-Thoughts: this doesn’t allow for dynamic estimation of the female/male ratio, but does make it very easy to make every element of the population differ between sexes
+<mark>**IMPLEMENTATION NOTES:** this doesn’t allow for dynamic estimation of the female/male ratio, but does make it very easy to make every element of the population differ between sexes
 
 To enable one fleet to act on multiple populations, we will need to calculate catch outside of the population loop.
 
 Places we currently loop through fleets within a population: \* Population-\>Prepare loops through Fleet-\>Prepare \* CalculateMortality loops through fleets to sum up F*s* CalculateCatch sums up catch weight-at-age and also expected catch \* CalculateIndex \* CalculateCatchNAA \* CalculateCatchWAA Reports: expected index, catch numbers-at-age, catch weight-at-age
 
-Fleet-\> and Population-\> Prepare set values to zero - don't reinitialize for each population.
+Fleet-\> and Population-\> Prepare set values to zero - don't reinitialize for each population.</mark>
 
 ### Predation
 
@@ -257,7 +274,7 @@ prey$nfleets <- predators$nfleets <- 2
 prey$nseasons <- predators$nseasons <- 1
 ```
 
-Thoughts: What if we have different years of data? Do we just fill the extra years with NAs or do we allow vector lengths to differ? Need some way to specify the type of link? Can we operate on a one-step lag?
+<mark>**IMPLEMENTATION NOTES:** What if we have different years of data? Do we just fill the extra years with NAs or do we allow vector lengths to differ? Need some way to specify the type of link? Can we operate on a one-step lag?</mark>
 
 ### Density-dependent M
 
@@ -282,9 +299,9 @@ prey$nfleets <- predators$nfleets <- 2
 prey$nseasons <- predators$nseasons <- 1
 ```
 
-Thoughts: What if we have different years of data? Do we just fill the extra years with NAs or do we allow vector lengths to differ? Need some way to specify the type of link? Can we operate on a one-step lag?
+<mark>**IMPLEMENTATION NOTES:** What if we have different years of data? Do we just fill the extra years with NAs or do we allow vector lengths to differ? Need some way to specify the type of link? Can we operate on a one-step lag?
 
-Time loop outside of the population units? Different subpops could be handled in the same way as fleet
+Time loop outside of the population units? Different subpops could be handled in the same way as fleet</mark>
 
 ### Different Area/Population
 
@@ -304,14 +321,10 @@ pop1$nfleets <- pop2$nfleets <- 2
 pop1$nseasons <- pop2$nseasons <- 1
 ```
 
-Thoughts:
+<mark>**IMPLEMENTATION NOTES:**
 
-TODO: Figure out looping over interactions between populations within each population. Create canva flow chart to show this graphically
+TODO: Figure out looping over interactions between populations within each population. Create canva flow chart to show this graphically</mark>
 
 ## References
 
-Correa, G.M., Monnahan, C.C., Sullivan, J.Y., Thorson, J.T. and Punt, A.E., 2023. Modelling time-varying growth in state-space stock assessments. ICES Journal of Marine Science, 80(7), 2036-2049.
-
 Methot , R. D., and Wetzel, C. R. 2013. Stock synthesis: a biological and statistical framework for fish stock assessment and fishery manage- ment. Fisheries Research, 142: 86--99.
-
-Stock , B. C., and Miller , T . J. 2021. The Woods Hole Assessment Model (WHAM): a general state-space assessment framework that incorpo- rates time- and age-varying processes via random effects and links to environmental covariates. Fisheries Research, 240: 105967.
