--- a/M2_length_structure.qmd
+++ b/M2_length_structure.qmd
@@ -117,25 +117,29 @@ One significant limitation of this approach is that while length-based selectivi
 
 ### A fully age and length structured model
 
-An alternate path for FIMS could be to specify abundance at age and length allowing for both age- and length-specific selectivity and growth-related fishery impacts such as depletion of fast-growing individuals. This scenario would track abundance-at-age and -length explicitly rather than requiring transformation through an age-length transition matrix.
+An alternate path for FIMS could be to specify abundance at age and length allowing for both age- and length-specific selectivity and growth-related fishery impacts such as depletion of fast-growing individuals. This scenario would track abundance-at-age and -length explicitly rather than through a fixed age-length translation matrix.
 
 $$
 \hat{C}_{y,f,l,a}=S_{y,f,l}S_{y,f,a}F_{y,f}N_{y,a,l}\frac{(1-\text{exp}(-Z_{y,a,l}))}{Z_{y,a,l}}
 $$
 
-Growth would then be incorporated through a transfer matrix $\phi_{a,l,l}$ for the proportional movement between length bins for each age step.
+It will instead require abundance at size and age to be incorporated through a transfer array $tran_{a1,l1,a2,l2}$ used to specify the proportional movement between length bins for each age step.
 
 $$
-\ N_{y+1,a,l}={\sum\limits_{{l}}} \phi_{a,l,l}S_{y,f,l}S_{y,f,a}F_{y,f}N_{y,a,l}\frac{\text{exp}(-Z_{y,a,l})}{Z_{y,a,l}}
+\ N_{y+1,a2,l2}={\sum\limits_{{l}}} tran_{a1,l1,l2}S_{y,f,l}S_{y,f,a}F_{y,f}N_{y,a,l}\frac{\text{exp}(-Z_{y,a,l})}{Z_{y,a,l}}
 $$
 
-These matrices could be user specified empirical values or derived from growth functions. Computational efficiency could then be achieved by reducing the number of tracked bins and the number of bins between which abundance transfers occur to achieve sparsity. As an example an SS3 growth morph style could be achieved by having 5 length bins at each age representing 5 different growth curves where individuals only grow along their growth curve so the the transfer proportion between bins is 1 for a single pair and zero for all others which could be ignored producing a sparse diagonal matrix.
+This transfer array would specify the source of individuals for every length and age bin tracked. These values could be input as a fixed empirical array or calculated based on a parametric rule. A dense formulation assuming all possible transfer combinations between length bins at each age would likely be too slow for practical implementation requiring n_length_bins x *n_length_bins x* n_age_bins computations. Computational efficiency could then be achieved by reducing the number of tracked bins and the number of bins between which abundance transfers occur to achieve sparsity. As an example an SS3 growth morph style could be used by having a limited number of length bins at each age representing different growth curves where individuals only grow along their growth curve so the the transfer proportion between bins is 1 for a single pair and zero for all others which could be ignored producing a sparse calculation of n_length_bins x n_age_bins calculations. If only a limited number of length bins are tracked in the population module an interpolation approach will be needed to calculate abundance by length at age in composition bins that do not match the population bins. If growth is not estimated then many functions could be used but if growth is estimated a dynamic approach adaptable to variable population bin values will be needed that does not require if statements (Bezier curve interpolation may work for this but needs investigation).
 
 Alternatively in a state-space context the model could possibly be represented something like this
 
 $$ \text{log}\hat{C}_{y,f,a,l}=\text{log}F_{y,f,a,l}-\text{log}Z_{y,f,a,l}+\text{log}N_{y,a,l}+\text{log}(1-\text{exp}(-Z_{y,a,l})) $$
 
-<mark>**IMPLEMENTATION NOTES:** This method has the benefit of being able to represent true age and length specific dynamics, while also being able to collapse down to a pure age or length structured model if the number of length or age bins was reduced to 1 such as is proposed in the fixed empirical length-at-age approach described above. Explicit age and length conditioned models such as GADGET have been developed in the past however they are often not fisheries focused and usually suffer from long run times. However, options for achieving sparsity and reduced run-time include variable age/length bins such that only high frequency bins are calculated (there are no 100cm age zero fish and no 1cm age 10 fish for instance so we could assume apriori that they are 0 based on some external threshold).
+$$ \ N_{t2,a2,l2}= {\sum\limits_{{a1,l1}}} trans_{t2,a1,l1,a2,l2} \ N_{t1,a1,l1}(\text{exp}(-Z_{y1,a1,l1})) $$
+
+Where numbers at age $a2$ and length $l2$ at time $t2$ are calculated as a sum over a subset of ages $a1$ and lengths $l1$ at time $t1$ adjusted for mortality during the period from $t1$ to $t2$ and the proportion transitioning from $a1$ and $l1$ to $a2$ and $l2$ defined in the $trans_{t2,a1,l1,a2,l2}$ array.
+
+<mark>**IMPLEMENTATION NOTES:** This method has the benefit of being able to represent true age and length specific dynamics, while also being able to collapse down to a pure age or length structured model if the number of length or age bins was reduced to 1 such as is proposed in the fixed empirical length-at-age approach described above. Explicit age and length conditioned models such as GADGET have been developed in the past however they are often not fisheries focused and usually suffer from long run times. However, options for achieving sparsity and reduced run-time include variable age/length bins such that only high frequency bins are calculated (there are no 100cm age zero fish and no 1cm age 10 fish for instance so we could assume apriori that they are 0 based on some external threshold). In order for this sparse approach to work in a model where length is estimated an approach for adaptive length bins would be needed to ensure that the full size structure is captured by the model.
 
 ## Summary of alternative methods
 
@@ -144,7 +148,7 @@ Notes and references in [M2 development notes folder](https://drive.google.com/d
 </mark>
 
 | Approach                | Pros                                                                         | Cons                                                                                             |
-|--------------------------------|--------------------|--------------------|
+|-------------------------|------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------|
 | Empirical Length at age | Fast and allows function forms of length selection                           | No uncertainty in length at age and no fishery impacts on length at age structure                |
 | Alaska method           | allow length-based selectivity                                               | does not allow for growth estimation or fishery impact on length structure                       |
 | SAM method              | State-space flexibility                                                      | Current practices in US focused on parametric modeling. Length not incorporated in current form. |
@@ -218,7 +222,7 @@ A purely length structured model could be produced by using n lengths subpopulat
 In SS3 the concept is: Sub-populations are biologically identified. Characteristics are: sex, growth morph, settlement timing (within year), platoon (for implementation of size-based survivorship). For each biology x settlement timing, fish are distributed across sexes and across platoons at birth. All reside in a N-at-age matrix with a dimension, g. natage(t,p,g,a) where t is yr&season, p is area, g is biology. A fleet operating in area p affects all bio groups in that area according to their selectivity and catchability. Recruits are distributed across populations and areas at birth. When fish of a given g move between areas, they are still the same “g” biologically. This is a bit limiting as it means that growth rate cannot be area-specific in SS3. Although a fast-growing morph could recruit into one area and a slow growing morph into another area and they can move among the areas. Alternatively, growth could be area-specific and when fish move between areas, the mean size of fish in each destination area would be the weighted mean of resident and immigrant fish. This means that mean size-at-age would be very dynamic and cause lots of computations.
 
 | Approach                       | Pros                                                                                                     | Cons                                                                                                                                                                                                                                                                                                                       |
-|------------------------------------|------------------|------------------|
+|--------------------------------|----------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | Populations are subpopulations | Subpopulation is easily interpretable and follows structure we are familiar with, computationally simple | Dynamics between sub-populations occur at a different timestep than those that can occur between ages within a sub-population, limits the applicability of density-dependent processes such as cannibalism, less flexible than specifying fully flexible population segments since each population must have age structure |
 | Dynamic subpopulations         | Subpopulations do not need age structure and interact in real time, and are very flexible and extensible | Bookkeeping might mean replicating complex structures anyway                                                                                                                                                                                                                                                               |
 | Biological subpopulations      | Easier biological interpretability                                                                       | Harder to extend to new segments                                                                                                                                                                                                                                                                                           |
